Add events controller (currently hardcoded)